Replaced usage of List.of as this is not available (in yet still supported) JDK 8 (#270)